--- a/HomeControl.Web/ClientApp/src/custom.css
+++ b/HomeControl.Web/ClientApp/src/custom.css
@@ -12,3 +12,11 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.active-device {
+  color: green;
+}
+
+.inactive-device {
+  color: grey;
+}
